--- a/package.json
+++ b/package.json
@@ -54,6 +54,6 @@
     "tailwindcss": "^3.4.17",
     "tailwindcss-animate": "^1.0.7",
     "tsx": "^4.16.2",
-    "typescript": "^5"
+    "typescript": "5.9.2"
   }
 }
