--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -3,31 +3,5 @@
   "outputDirectory": ".next",
   "framework": "nextjs",
   "installCommand": "npm install",
-  "devCommand": "npm run dev",
-  "functions": {
-    "app/**/*.tsx": {
-      "runtime": "nodejs18.x"
-    }
-  },
-  "rewrites": [
-    {
-      "source": "/api/(.*)",
-      "destination": "/api/$1"
-    },
-    {
-      "source": "/(.*)",
-      "destination": "/index.html"
-    }
-  ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/"
-    }
-  ],
-  "env": {
-    "NEXT_PUBLIC_API_URL": "http://143.110.196.243",
-    "NEXT_PUBLIC_BACKEND_URL": "http://143.110.196.243",
-    "NEXT_PUBLIC_ENVIRONMENT": "production"
-  }
+  "devCommand": "npm run dev"
 }
