--- a/backend/requirements-minimal.txt
+++ b/backend/requirements-minimal.txt
@@ -1,14 +1,12 @@
-# Dependências mínimas para deploy no DigitalOcean
+# Dependências ultra-mínimas para deploy no DigitalOcean (sem pandas)
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
 python-multipart==0.0.6
 
 # Banco de dados
 mysql-connector-python==8.2.0
-pymysql==1.1.0
 
-# Processamento básico
-pdfplumber==0.10.3
+# Utilitários básicos
 requests==2.31.0
 python-dotenv==1.0.0
 pydantic==2.5.0
