--- a/.do/app.yaml
+++ b/.do/app.yaml
@@ -7,6 +7,7 @@ services:
     branch: master
   run_command: uvicorn main:app --host 0.0.0.0 --port $PORT
   environment_slug: python
+  build_command: cp requirements-minimal.txt requirements.txt && echo "Using minimal requirements for build"
   instance_count: 1
   instance_size_slug: basic-xxs
   http_port: 8080
